@@ -1,6 +1,7 @@
 2.0.2
 - Filtrare mai corecta
-- Imbunatatiri arhive zip cu subfoldere
+- Imbunatatiri arhive ZIP cu subfoldere
+- Imbunatatiri arhive RAR
 
 2.0.1
 Îmbunătățiri vizuale UI
